unpackaged/main/default/objects/pse__Gantt_Global_Settings__c/pse__Gantt_Global_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Contains settings that control the behavior of Gantt for all users in your organization.</description>
    <label>Gantt Global Settings</label>
</CustomObject>