unpackaged/main/default/objects/pse__Gantt_Global_Settings__c/fields/pse__Respect_Sharing_When_Deleting_Tasks__c.field-meta.xml
<CustomField>
    <fullName>pse__Respect_Sharing_When_Deleting_Tasks__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If selected, sharing settings are respected when deleting project tasks in Gantt.</description>
    <inlineHelpText>If selected, sharing settings are respected when deleting project tasks in Gantt.</inlineHelpText>
    <label>Respect Sharing When Deleting Tasks</label>
    <type>Checkbox</type>
</CustomField>