unpackaged/main/default/objects/pse__Gantt_Global_Settings__c/fields/pse__Respect_Sharing_When_Editing_a_Project__c.field-meta.xml
<CustomField>
    <fullName>pse__Respect_Sharing_When_Editing_a_Project__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If selected, you must have edit access to the project record to open Gantt in edit mode.</description>
    <inlineHelpText>If selected, you must have edit access to the project record to open Gantt in edit mode.</inlineHelpText>
    <label>Respect Sharing When Editing a Project</label>
    <type>Checkbox</type>
</CustomField>