unpackaged/main/default/objects/pse__Gantt_Global_Settings__c/fields/pse__Save_Project_Task_Assignment_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>pse__Save_Project_Task_Assignment_Batch_Size__c</fullName>
    <defaultValue>600</defaultValue>
    <description>The batch size to be used when saving new and updated project task assignments in Gantt.</description>
    <inlineHelpText>The batch size to be used when saving new and updated project task assignments in Gantt.</inlineHelpText>
    <label>Save Project Task Assignment Batch Size</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>