unpackaged/main/default/objects/pse__Gantt_Global_Settings__c/fields/pse__Show_Create_Held_Resource_Request_Button__c.field-meta.xml
<CustomField>
    <fullName>pse__Show_Create_Held_Resource_Request_Button__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Shows the Create Held Resource Requests button in Gantt.</description>
    <inlineHelpText>When selected, shows the Create Held Resource Requests button in Gantt. This setting is selected by default.</inlineHelpText>
    <label>Show Create Held Resource Request Button</label>
    <type>Checkbox</type>
</CustomField>