unpackaged/main/default/objects/pse__Gantt_Global_Settings__c/fields/pse__Show_Milestones_Button__c.field-meta.xml
<CustomField>
    <fullName>pse__Show_Milestones_Button__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Shows the Project Milestones button in Gantt.</description>
    <inlineHelpText>When selected, shows the Project Milestones button in Gantt. This setting is selected by default.</inlineHelpText>
    <label>Show Project Milestones Button</label>
    <type>Checkbox</type>
</CustomField>