unpackaged/main/default/objects/pse__Gantt_Global_Settings__c/fields/pse__Suppress_Auto_Link_PTA__c.field-meta.xml
<CustomField>
    <fullName>pse__Suppress_Auto_Link_PTA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This allows a user to change the default behavior of Gantt so that new project task assignments will not be linked to existing assignments or resource requests.</description>
    <inlineHelpText>When selected, allows you to change the default behavior of Gantt so that new project task assignments are not linked to existing assignments or resource requests. This setting is deselected by default.</inlineHelpText>
    <label>Suppress Auto Link Assignment</label>
    <type>Checkbox</type>
</CustomField>